# home-management-client

./: .clang-format  .gitignore  CMakeLists.txt  README.md  acknowledge
include/: agenda.h  apiconnector.h  daywidget.h  event.h  eventdaywidget.h  eventwidget.h  fillerhourcolumn.h  fulldayswidget.h  hourslateraldaywidget.h  mainwindow.h  rrules.h  utils.h  weekview.h
libs/: CMakeLists.txt
libs/calendar/: CMakeLists.txt
libs/calendar/include/: agenda.h  apiconnector.h  event.h  rrules.h  storage.h  utils.h
libs/calendar/src/: agenda.cpp  apiconnector.cpp  event.cpp  rrules.cpp  storage.cpp  utils.cpp
libs/calendar/test/: CMakeLists.txt  agenda_test.cpp  event_test.cpp  rrules_test.cpp
resources/: resources.qrc
src/: daywidget.cpp  daywidget.ui  event.cpp  eventdaywidget.cpp  eventdaywidget.ui  eventwidget.cpp  eventwidget.ui  fillerhourcolumn.cpp  fillerhourcolumn.ui  fulldayswidget.cpp  fulldayswidget.ui  hourslateraldaywidget.cpp  hourslateraldaywidget.ui  main.cpp  mainwindow.cpp  mainwindow.ui  rrules.cpp  storage.cpp  utils.cpp  weekview.cpp  weekview.ui
test/: CMakeLists.txt  rrules_test.cpp  utils_test.cpp
